# SootoPYlis

./: .gitignore  LICENSE  README.md  desktop_probe.py  open_desktop.bat  pyproject.toml  run_desktop.py
App/SootoPYlisDesktop/Sources/sootopylis_desktop/: __init__.py  app.py  main.py  viewmodels.py
App/SootoPYlisDesktop/Sources/sootopylis_desktop/qml/: Main.qml
App/SootoPYlisDesktop/Sources/sootopylis_desktop/qml/Shared/: OptionChip.qml  OptionsSidebarSection.qml  PaletteSwatch.qml  SettingRow.qml  SidebarSection.qml  StatRow.qml  ThemePalette.js
Sources/EmeraldData/emeralddata/: __init__.py
Sources/EmeraldData/emeralddata/manifests/: __init__.py
Sources/EmeraldData/emeralddata/models/: __init__.py
Sources/EmeraldExtractor/emeraldextractor/: __init__.py  pipeline.py  reference_data.py  rendering.py
Sources/EmeraldExtractor/emeraldextractor/emitters/: __init__.py
Sources/EmeraldExtractor/emeraldextractor/parsers/: __init__.py
Sources/EmeraldExtractor/emeraldextractor/rom/: __init__.py  probe.py
Sources/SootCore/sootcore/: __init__.py  session.py
Sources/SootCore/sootcore/battle/: __init__.py
Sources/SootCore/sootcore/save/: __init__.py
Sources/SootCore/sootcore/script/: __init__.py
Sources/SootCore/sootcore/world/: __init__.py  overworld.py
Sources/SootUI/sootui/: __init__.py  tokens.py
Sources/SootUI/sootui/chrome/: __init__.py
Sources/SootUI/sootui/components/: __init__.py
Sources/SootUI/sootui/overlays/: __init__.py
Sources/SootUI/sootui/theme/: __init__.py
Tests/: test_overworld_runtime.py  test_rom_probe.py
(+2 files in other folders)
